@@ -37,4 +37,4 @@ Repository: CRAN
 Encoding: UTF-8
 Packaged: 2017-11-24 23:42:52 UTC; jhz22
 Date/Publication: 2017-04-19 11:10:23 UTC
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
