@@ -1,44 +1,147 @@
-useDynLib(gap, .registration = TRUE)
-export(AE3, ab, allele.recode, allDuplicated, a2g, asplot,
-   BFDP, bt, b2r,
-   chr_pos_a1_a2, cis.vs.trans.classification, ccsize, chow.test, cnvplot, comp.score, cov.invlogit, cs,
-        circos.cis.vs.trans.plot, circos.cnvplot, circos.mhtplot, circos.mhtplot2, 
-   ESplot,
-   fbsize, FPRP,
-   g2a, g2a.c, gc.control, gc.em, gcode, gcontrol, gcontrol2, gc.lambda, gcp, genecounting, geno.recode,
-        get_b_se, get_pve_se, get_sdy,
-        getPTE, getb1star, gif, grec2g, grid2d, gsmr, MCMCgrm,
-   h2_mzdz, h2G, h2GE, h2l, hap, hap.control, hap.em, hap.score, hmht.control, htr,
-        h2.jags, hwe, hwe.cc, hwe.hardy, hwe.jags, HapDesign, HapFreqSE,
-   inv_chr_pos_a1_a2, invlogit, invnormal, ixy,
-   KCC, k, klem, kin.morgan,
-   LD22, LDkl, lambda1000, logit, log10p, log10pvalue, logp,
-   METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2,
-        mhtplot.trunc, mht.control,
-        mia, miamiplot, micombine, mr.boot, mtdt, mtdt2, muvar, mvmeta,
-   PARn, pbsize, pbsize2, pedtodot, pedtodot_verbatim, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score, pvalue,
-        pqtl2dplot, pqtl2dplotly, pqtl3dplotly,
-   qqfun, qqunif, qtlClassifier,
-   read.ms.output, revhap, revhap.i, ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA, revStrand, runshinygap,
-   s2k, se.exp, se.invlogit, sentinels, snp.ES, snp.HWE, snp.PAR, snptest_sample, solve_skol,
-   textbox, toETDT, tscc,
-   ungcode,
-   VR,
-   weighted.median,whscore, WriteGRM, WriteGRMBin, WriteGRMSAS,
-   x2, xy,
-   z)
-S3method(plot, hap.score)
-S3method(print, hap.score)
-import(dplyr,gap.datasets,utils)
-importFrom("graphics", "abline", "arrows", "axis", "box", "identify",
-           "legend", "lines", "mtext", "par", "plot", "points",
-           "segments", "text")
-importFrom("grDevices", "palette", "xy.coords")
-importFrom("stats", "as.formula", "coefficients", "cor", "dnorm",
-           "glm", "integrate", "median", "nlm", "pchisq", "pf",
-           "pnorm", "ppoints", "pt", "qchisq", "qnorm", "qqplot", "qt",
-           "quantile", "rbinom", "rexp", "rnorm", "runif", "var")
-importFrom("grDevices", "dev.off")
-importFrom("graphics", "title")
-importFrom("graphics", "boxplot")
-importFrom("stats", "coef", "lm", "sd")
+# Generated by roxygen2: do not edit by hand
+
+S3method(plot,hap.score)
+S3method(print,hap.score)
+export(AE3)
+export(BFDP)
+export(ESplot)
+export(FPRP)
+export(LD22)
+export(LDkl)
+export(MCMCgrm)
+export(METAL_forestplot)
+export(ab)
+export(asplot)
+export(b2r)
+export(bt)
+export(ccsize)
+export(chow.test)
+export(chr_pos_a1_a2)
+export(circos.cis.vs.trans.plot)
+export(circos.cnvplot)
+export(circos.mhtplot)
+export(circos.mhtplot2)
+export(cis.vs.trans.classification)
+export(cnvplot)
+export(comp.score)
+export(cs)
+export(fbsize)
+export(gc.em)
+export(gc.lambda)
+export(gcontrol)
+export(gcontrol2)
+export(gcp)
+export(genecounting)
+export(get_b_se)
+export(get_pve_se)
+export(get_sdy)
+export(gif)
+export(gsmr)
+export(h2.jags)
+export(h2G)
+export(h2GE)
+export(h2_mzdz)
+export(h2l)
+export(hap)
+export(hap.em)
+export(hap.score)
+export(hmht.control)
+export(hwe)
+export(hwe.cc)
+export(hwe.hardy)
+export(hwe.jags)
+export(inv_chr_pos_a1_a2)
+export(invnormal)
+export(kin.morgan)
+export(klem)
+export(log10p)
+export(log10pvalue)
+export(logp)
+export(masize)
+export(metap)
+export(metareg)
+export(mht.control)
+export(mhtplot)
+export(mhtplot.trunc)
+export(mhtplot2)
+export(mia)
+export(miamiplot)
+export(mtdt)
+export(mtdt2)
+export(muvar)
+export(mvmeta)
+export(pbsize)
+export(pbsize2)
+export(pedtodot)
+export(pedtodot_verbatim)
+export(pfc)
+export(pfc.sim)
+export(pgc)
+export(pqtl2dplot)
+export(pqtl2dplotly)
+export(pqtl3dplotly)
+export(pvalue)
+export(qqfun)
+export(qqunif)
+export(qtlClassifier)
+export(read.ms.output)
+export(revStrand)
+export(s2k)
+export(sentinels)
+export(snptest_sample)
+export(tscc)
+export(whscore)
+import(dplyr)
+import(gap.datasets)
+import(utils)
+importFrom(grDevices,palette)
+importFrom(grDevices,xy.coords)
+importFrom(graphics,abline)
+importFrom(graphics,arrows)
+importFrom(graphics,axis)
+importFrom(graphics,box)
+importFrom(graphics,boxplot)
+importFrom(graphics,identify)
+importFrom(graphics,legend)
+importFrom(graphics,lines)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,points)
+importFrom(graphics,segments)
+importFrom(graphics,text)
+importFrom(graphics,title)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,coefficients)
+importFrom(stats,cor)
+importFrom(stats,dnorm)
+importFrom(stats,glm)
+importFrom(stats,integrate)
+importFrom(stats,lm)
+importFrom(stats,median)
+importFrom(stats,nlm)
+importFrom(stats,pchisq)
+importFrom(stats,pf)
+importFrom(stats,pnorm)
+importFrom(stats,ppoints)
+importFrom(stats,pt)
+importFrom(stats,qchisq)
+importFrom(stats,qnorm)
+importFrom(stats,qqplot)
+importFrom(stats,qt)
+importFrom(stats,quantile)
+importFrom(stats,rbinom)
+importFrom(stats,rexp)
+importFrom(stats,rnorm)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,var)
+importFrom(utils,data)
+importFrom(utils,head)
+importFrom(utils,packageDescription)
+importFrom(utils,read.csv)
+importFrom(utils,read.delim)
+importFrom(utils,read.table)
+importFrom(utils,tail)
+importFrom(utils,write.table)
+useDynLib(gap)
