@@ -12,23 +12,8 @@
 \alias{allele.recode}
 \alias{geno.recode}
 \alias{a2g}
-\alias{chr_pos_a1_a2}
 \alias{ci}
-\alias{Cox.est}
-\alias{Cox.T}
 \alias{cov.invlogit}
-\alias{Dev}
-\alias{Dev.est}
-\alias{DevH0dominant}
-\alias{DevH0dominant.est}
-\alias{DevH0recessive}
-\alias{DevH0recessive.est}
-\alias{DevHaGdominant}
-\alias{DevHaGdominant.est}
-\alias{DevHaGrecessive}
-\alias{DevHaGrecessive.est}
-\alias{DevHa.recessive}
-\alias{DevHa.recessive.est}
 \alias{ExpN.recessiveH0}
 \alias{ExpN.recessiveHa}
 \alias{g2a}
@@ -42,9 +27,7 @@
 \alias{hap.control}
 \alias{hap.score.glm}
 \alias{hap.score.podds}
-\alias{hmht.control}
 \alias{hw}
-\alias{inv_chr_pos_a1_a2}
 \alias{invlogit}
 \alias{is.miss}
 \alias{ixy}
@@ -53,7 +36,6 @@
 \alias{logit}
 \alias{m2plem}
 \alias{makeRLEplot}
-\alias{mht.control}
 \alias{micombine}
 \alias{mr.boot}
 \alias{plem2m}
@@ -117,8 +99,6 @@ These are internal functions.
 
 a2g gives allele-to-genotype conversion.
 
-chr_pos_a1_a2 produces SNPID format.
-
 g2a returns two alleles according to a genotype identifier.
 
 g2a.c is the C version of g2c.
@@ -143,8 +123,6 @@ included as courtesy of Prof Andrea Foulkes from the useR!2008 tutorial.
 hap.score.glm, hap.score.podds are used by hap.score().
 
 invlogit, inverse logit transformation.
-
-inv_chr_pos_a1_a2 is the inverse function of chr_pos_a1_a2.
 
 is.miss is undocumented.
 
